# n_queens

./: .gitignore  CMakeLists.txt
src/: Board.cpp  Board.h  BoardWidget.cpp  BoardWidget.h  InputWindow.cpp  InputWindow.h  InputWindowContent.cpp  InputWindowContent.h  MainWindow.cpp  MainWindow.h  OutputWindow.cpp  OutputWindow.h  OutputWindowContent.cpp  OutputWindowContent.h  Queen.h  Table.cpp  Table.h  TreeNode.h  config.h  main.cpp
